<resources>
    <string name="app_name">Delivertiptop</string>

    <string name="google_client_id_acceptance">abcd</string>
    <string name="google_client_secret_acceptance">abcd</string>
    <string name="google_client_redirect_uri_acceptance">abcd</string>

    <string name="google_client_id_development">abcd</string>
    <string name="google_client_secret_development">abcd</string>
    <string name="google_client_redirect_uri_development">abcd</string>

    <string name="google_client_id_production">abcd</string>
    <string name="google_client_secret_production">abcd</string>
    <string name="google_client_redirect_uri_production">abcd</string>

    <string name="google_client_id_staging">abcd</string> <!-- 586601826954-bf3rmcj9dbhii39tpu9negagt85ebfjg.apps.googleusercontent.com -->
    <string name="google_client_secret_staging">abcd</string> <!-- q25W9B3-pqWebWZ1ZY6Za6op -->
    <string name="google_client_redirect_uri_staging">abcd</string> <!-- https://udeoglobe-staging.firebaseapp.com/__/auth/handler -->

    <string name="required_email">Required Email</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="required_password">Required Password</string>

    <string name="google_maps_key">abcd</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="call_not_supported">Call Not Supported</string>
    <string name="pick_image_intent_text">Pick Image</string>
    <string name="something_wrong__with_direction_api">Some Thing went wrong with Direction Api</string>
    <string name="facebook_app_id">123456</string>
    <string name="server_setting">Server Settings</string>
    <string name="minimun_version">Minimun Version</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="noInternet">Please Connect to working internet</string>
    <string name="alert">Alert</string>
    <string name="retry">Retry</string>
    <string name="areYouSure">Are You Sure?</string>
    <string name="error">Error</string>
    <string name="session_expire_title">Session Expired</string>
    <string name="session_expire_message">Your session has been expired please login again</string>
    <string name="build_version">Build Version</string>
    <string name="url">Url</string>
    <string name="crash_app">Crash App</string>
    <string name="str_screen_under_development">Under Development Screen</string>
    <string name="msg_subscribed">Subscribe To FCM Topic Successfully</string>
    <string name="msg_subscribe_failed">Failed to Subscribe to FCM Topic</string>
    <string name="str_select_image">Select Image</string>
    <string name="str_select_video">Select Video</string>
    <string name="str_gallery">Gallery</string>
    <string name="str_camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="go_to_setting">Go To Setting</string>
    <string name="camera_permission_msg">Please enable camera permission from Settings.</string>
    <string name="gallery_permission_msg">Please enable gallery permission from Settings.</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="maximum_image_select_message">You can only select maximum <![CDATA[<b><font color=#1F72A3> %1$s </font></b>]]> images</string>
    <string name="selectVideo">Select Video</string>
    <string name="max_video_msg">You can select only one video</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="balance">Balance</string>
    <string name="account">Account</string>
    <string name="login">Login</string>
    <string name="location">Location</string>
    <string name="general">General</string>
    <string name="business_information">Business Information</string>
    <string name="bank_account">Bank Account</string>
    <string name="transfer">Transfer</string>
    <string name="business_name">Business Name</string>
    <string name="business_email">Business Email</string>
    <string name="business_phone_number">Business Phone Number</string>
    <string name="register">Register</string>
    <string name="transaction">Transaction</string>
    <string name="search_receipt_or_card">Search Receipt or Card</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="link_account">Link Account</string>
    <string name="payout">Payout</string>
    <string name="disputes">Disputes</string>
    <string name="drawer_history">Drawer History</string>
    <string name="current_drawer">Current Drawer</string>
    <string name="sales">Sales</string>
    <string name="send_referral">Send referral</string>
    <string name="sales_summary">Sales Summary</string>
    <string name="net_sale">Net Sale</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="total">Total</string>
    <string name="refund_by_amount">Refund by Amount</string>
    <string name="gift_card_sales">Gift Card Sales</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_email">Enter your Email</string>
    <string name="enter_your_business_name">Enter your Business Name</string>
    <string name="enter_your_phone_number">Enter your Phone Number</string>
    <string name="transfer_funds_2_3_business_days">TRANSFER FUNDS (2-3 BUSINESS DAYS)</string>
    <string name="instant_transfer_3_fee">INSTANT TRANSFER(3% FEE</string>
    <string name="available">Available</string>
    <string name="_0_00">$0.00</string>
    <string name="instant_transfer_instant_3_fee">INSTANT TRANSFER (INSTANT, 3 % FEE)</string>
    <string name="sales_detail">Sales Detail</string>

</resources>