<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_30dp"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/imageViewDelivertiptop"
            android:layout_width="@dimen/_200dp"
            android:layout_height="@dimen/_200dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:src="@drawable/delivertiptop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_30sp"
            android:layout_marginTop="@dimen/_35dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/sign_in" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_marginTop="@dimen/_15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/email_address" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:hint="@string/email"
            android:layout_marginTop="@dimen/_3dp"
            android:paddingHorizontal="@dimen/_5dp"
            android:background="@drawable/rounded_edittext" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sp"
            android:layout_marginTop="@dimen/_15dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/password" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:paddingHorizontal="@dimen/_5dp"
            android:layout_marginTop="@dimen/_3dp"
            android:drawableRight="@drawable/ic_eye"
            android:background="@drawable/rounded_edittext" />

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_25dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@drawable/rounded_button"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/register" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/_5dp"
                android:text="@string/forgot_password"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_15sp" />

        </RelativeLayout>



    </LinearLayout>
</layout>