<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:text="@string/settings"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewReports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:drawablePadding="@dimen/_10dp"
            android:text="@string/reports"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_reports" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/textViewBalance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="@dimen/_10dp"
            android:textColor="@color/black"
            android:drawablePadding="@dimen/_10dp"
            android:text="@string/balance"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_balance" />



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>


        <TextView
            android:id="@+id/textViewAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:padding="@dimen/_10dp"
            android:drawablePadding="@dimen/_10dp"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableLeftCompat="@drawable/ic_account" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"

            android:background="@android:color/darker_gray"/>

    </LinearLayout>
