<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ui.fragments.businessInformation.BusinessInformationFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_35sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/business_information" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/business_name" />

        <EditText
            android:id="@+id/editTextBusinessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="Construction"
            android:paddingHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/business_email" />

        <EditText
            android:id="@+id/editTextBusinessEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:background="@null"
            android:text="jibranzafar@gmail.com"
            android:textColor="@color/colorAccent"
            android:paddingHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"/>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10dp"
            android:textSize="@dimen/_20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/business_phone_number" />

        <EditText
            android:id="@+id/editTextBusinessPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:text="09373628932"
            android:paddingHorizontal="@dimen/_10dp"
            android:layout_marginTop="@dimen/_5dp"/>

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1dp"
            android:layout_marginTop="@dimen/_8dp"
            android:background="@android:color/darker_gray"/>

    </LinearLayout>
</layout>